// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lambda should create one Lambda with specified runtime 1`] = `
Object {
  "Resources": Object {
    "LambdaLambda764FC51E": Object {
      "DependsOn": Array [
        "LambdaLambdaServiceRole7D5BE2AE",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "lambda",
        },
        "FunctionName": "LambdaLambda",
        "Handler": "handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LambdaLambdaServiceRole7D5BE2AE",
            "Arn",
          ],
        },
        "Runtime": "nodejs10.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaLambdaServiceRole7D5BE2AE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Lambda should create one Lambda with specified timeout 1`] = `
Object {
  "Resources": Object {
    "LambdaLambda764FC51E": Object {
      "DependsOn": Array [
        "LambdaLambdaServiceRole7D5BE2AE",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "lambda",
        },
        "FunctionName": "LambdaLambda",
        "Handler": "handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LambdaLambdaServiceRole7D5BE2AE",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaLambdaServiceRole7D5BE2AE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Lambda should create one default Lambda 1`] = `
Object {
  "Resources": Object {
    "LambdaLambda764FC51E": Object {
      "DependsOn": Array [
        "LambdaLambdaServiceRole7D5BE2AE",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "lambda",
        },
        "FunctionName": "LambdaLambda",
        "Handler": "handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LambdaLambdaServiceRole7D5BE2AE",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaLambdaServiceRole7D5BE2AE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Lambda should throw if the given timeout is > 60 seconds 1`] = `Object {}`;
